<resources>
    <string name="app_name">Wallet Buddy</string>
    
    <string name="web_app_client_id">554905135050-k3it33cbstv6u7hrrdr2gbgeucceii6b.apps.googleusercontent.com</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?\t</string>
    <string name="text_forgot_password">Forgot your password?\t</string>
    <string name="button_login_with_password">LOG IN</string>
    <string name="button_log_out">LOG OUT</string>
    <string name="button_create_account">CREATE</string>
    <string name="button_sign_up">Sign Up!</string>
    <string name="button_reset_password">Reset it!</string>

    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="hint_enter_password_confirm">Confirm your password</string>

    <string name="progress_dialog_authenticating_title"></string>
    <string name="progress_dialog_please_wait_msg">Please wait …</string>

    <!-- Main screen - all wallets -->
    <string name="main_screen_title">Wallet Buddy</string>
    <string name="main_screen_wallet_created">Created on\n%s</string>
    <string name="main_screen_wallet_since">Since %s</string>


    <!-- Edit wallets -->
    <string name="edit_wallets_title">Wallets</string>
    <string name="edit_wallets_hint_name">Wallet name</string>

    <!-- Edit categories -->
    <string name="edit_categories_title">Categories</string>
    <string name="edit_categories_expense_tab">Expense</string>
    <string name="edit_categories_income_tab">Income</string>
    <string name="edit_categories_hint_name">Category name</string>

    <!-- Add/Edit Income -->
    <string name="income_title">Add income</string>
    <string name="income_wallet">Wallet</string>
    <string name="income_category">Category</string>
    <string name="income_amount_hint">How much?</string>
    <string name="income_desc_hint">From what?</string>
    <string name="income_btn_add">ADD</string>
    <string name="income_btn_save">SAVE</string>
    <string name="income_btn_delete">DELETE</string>

    <string name="expense_title">Add expense</string>
    <string name="expense_desc_hint">For what?</string>

    <string name="transfer_title">Transfer funds</string>
    <string name="transfer_from_wallet">From wallet</string>
    <string name="transfer_to_wallet">To wallet</string>

    <string name="details_wallet_created">Created on %s</string>




    <string name="main_title">This Month</string>
    <string name="main_date"> </string>
    <string name="main_btnTestDb">Test DB</string>
    <string name="main_addDebit">-</string>
    <string name="main_addCredit">+</string>
    <string name="main_def_balance">0.00</string>

    <string name="history_title">History</string>
    <string name="history_select">Select a month</string>
    <string name="history_def_balance">0.00</string>
    <string name="history_def_month">MMM-YYYY</string>

    <string name="analyze_title">Analyze</string>
    <string name="analyse_year">Year</string>
    <string name="analyse_year_prompt">Years:</string>
    <string name="analyse_category">Category</string>
    <string name="analyse_category_prompt">Categories:</string>
    <string name="analyse_no_data">Select YEAR, CATEGORY and press DRAW</string>
    <string name="analyse_button">Draw</string>

    <string name="add_main">Ooops ...</string>
    <string name="add_account">Account: </string>
    <string name="add_category">Category: </string>
    <string name="add_amount">Amount: </string>
    <string name="add_amountHint">How much ? </string>
    <string name="add_currency">USD</string>
    <string name="add_description">Description: </string>
    <string name="add_descriptionHint">About ? </string>
    <string name="add_btnAdd">ADD</string>

    <string name="addDebit_title">Add debit</string>
    <string name="addCredit_title">Add credit</string>

    <string name="pie_monthly_title">History</string>

    <string name="trans_details_title">Details</string>
    <string name="trans_details_text">Categories</string>

    <string name="trans_update_title">Update</string>
    <string name="trans_update_cancel">CANCEL</string>

    <string name="trans_update_save">SAVE</string>
    <string name="trans_update_save_dialog_title">Save changes?</string>
    <string name="trans_update_save_dialog_positive">SAVE</string>
    <string name="trans_update_save_dialog_negative">CANCEL</string>

    <string name="trans_update_delete">DELETE</string>
    <string name="trans_update_delete_dialog_title">Delete transaction?</string>
    <string name="trans_update_delete_dialog_positive">DELETE</string>
    <string name="trans_update_delete_dialog_negative">CANCEL</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_atMain">You are already in This Month section.</string>
    <string name="nav_atHistory">You are already in History section.</string>

    <string name="about_dialog">
        \t<i>Version:</i> <b>0.0.1b</b>
        \n\t<b><i>BETA VERSION</i></b>
        \n\n\t<i>Manage and track your personal funds - with the help of the cloud.</i>
        \n\n\t<i>Credits:</i>
        \n\tIcons made by <a href="http://www.freepik.com/"><b>Freepik</b></a>
        and <a href="http://www.flaticon.com/authors/madebyoliver"><b>Madebyoliver</b></a>
        from <a href="http://www.flaticon.com/">www.flaticon.com</a>
        \n
    </string>
    <string name="about_dialog_title">About</string>

    <string name="settings_title">Settings</string>
    <string name="action_example">Example action</string>

    <!-- Errors -->
    <string name="error_enter_email">Enter your email.</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_enter_password">Enter your password.</string>
    <string name="error_invalid_password_too_short">Password must be at least 6 characters long.</string>
    <string name="error_confirm_password">Confirm your password.</string>
    <string name="error_confirm_password_not_same">Wrong password verification.</string>


    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_email_taken">The email is already taken.</string>


    <!-- TEST PURPOSES -->
    <string name="test_really_long_text">This is some reaaaaaaaly long text to be displayed. With some 2.5435 1231,12312  strange characters :D И малко български едва ли не.
    This is some reaaaaaaaly long text to be displayed. With some 2.5435 1231,12312  strange characters :D И малко български едва ли не.
    This is some reaaaaaaaly long text to be displayed. With some 2.5435 1231,12312  strange characters :D И малко български едва ли не.
    This is some reaaaaaaaly long text to be displayed. With some 2.5435 1231,12312  strange characters :D И малко български едва ли не.
    This is some reaaaaaaaly long text to be displayed. With some 2.5435 1231,12312  strange characters :D И малко български едва ли не.</string>
    <string name="test_long_text">This is some long text to be displayed. With some 2.5435 1231,12312  strange characters :D И малко български едва ли не.</string>



</resources>
