<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColorLight"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Dummy item to prevent EditText from receiving focus at startup-->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <ImageView
            android:id="@+id/iv_logo_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_icon_wallet" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"

            android:hint="@string/hint_enter_email"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myWhite"

                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/login_pass"

                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/myBlack"
                android:textSize="18sp"

                android:fontFamily="sans-serif"
               />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"

            android:hint="@string/hint_enter_password"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myWhite"

                android:imeOptions="actionDone"
                android:inputType="textPassword"

                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/myBlack"
                android:textSize="18sp"
                android:textStyle=""
                android:fontFamily="sans-serif"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:background="@color/primaryColor"

            android:text="@string/button_login_with_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"

            android:onClick="onBtnLogInPressed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_account"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnSignUpPressed"
                android:text="@string/button_sign_up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forgot_your_password"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_forgot_password"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/tv_reset"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnForgotPressed"
                android:text="@string/button_reset_password" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>